# imc-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  deploy.sh  dockerfile  tmp.xml
bindings/python/: Cargo.toml  README.md  test.py
bindings/python/src/: lib.rs
imc-hdf5/: Cargo.toml
imc-hdf5/src/: main.rs
imc-info/: Cargo.toml
imc-info/src/: main.rs
lib/: Cargo.toml  README.md
lib/fuzz/: Cargo.toml
lib/fuzz/fuzz_targets/: fuzz_target_1.rs
lib/src/: acquisition.rs  calibration.rs  channel.rs  error.rs  images.rs  lib.rs  panorama.rs  phenotype.rs  slide.rs
lib/src/convert/: mod.rs
lib/src/halo/: mod.rs
lib/src/mcd/: mod.rs  parser.rs  xml_types.rs
lib/src/parser/: mod.rs  parser.rs  xml_types.rs
lib/src/transform/: mod.rs
src/: lib.rs  parser.rs
