[package]
name = "imc-rs"
version = "0.1.0"
edition = "2021"
authors = ["Alan Race <alan.race@uni-marburg.de>"]
homepage = "https://github.com/AlanRace/imc-rs"
license = "MIT"
repository = "https://github.com/AlanRace/imc-rs.git"

[dependencies]
quick-xml = "0.23.0"
nalgebra = "0.31.0" 
num-traits = "0.2"
image = "0.24"
lz4_flex = "0.9.3"
thiserror = "1.0"
byteorder = "1"
rand = "0.8.5"

csv = "1.1"