[package]
name = "pyimc"
version = "0.1.0"
edition = "2018"
authors = ["Alan Race <alan.race@uni-marburg.de>"]

[lib]
name = "pyimc"
crate-type = ["cdylib"]


[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]

[dependencies]
imc-rs = { path = "../../lib" }
numpy = "0.15"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

