[package]
name = "pyimc"
version = "0.1.0"
edition = "2021"
authors = ["Alan Race <alan.race@uni-marburg.de>"]
readme = "README.md"

[lib]
name = "pyimc"
crate-type = ["cdylib"]


[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]

[dependencies]
imc-rs = { path = "../../lib" }
numpy = "0.15"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

