[package]
name = "pyimc"
version = "0.1.1"
edition = "2021"
authors = ["Alan Race <alan.race@uni-marburg.de>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/AlanRace/imc-rs"
repository = "https://github.com/AlanRace/imc-rs.git"

[lib]
name = "pyimc"
crate-type = ["cdylib"]


[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]

[dependencies]
imc-rs = { path = "../../lib" }
numpy = "0.16"

[dependencies.pyo3]
version = "0.16"
features = ["extension-module"]

